projects/ui/src/app/micro-frontend/pages/github-actions/github-actions.component.css
.actions-footer {
  position: fixed;
  bottom: 0;
  width: 100%;
}

.busy-indicator {
  text-align: center;
  margin-top: 8rem;
}

.footer-buttons-gap {
  gap: 0.5rem;
}

.description {
  font-family: var(--sapFontFamily);
  padding: 1rem;
  padding-bottom: 0;
  font-size: var(--sapFontSize);
}

#message-popover {
  --sapButton_TextColor: var(--sapButton_Negative_TextColor);
  --sapButton_BorderColor: var(--sapButton_Negative_Background);
  --sapButton_Background: var(--sapButton_Negative_BorderColor);
}

